--- a/trunk/students/2012/opeykin/bytecode_translation/Makefile
+++ b/trunk/students/2012/opeykin/bytecode_translation/Makefile
@@ -3,7 +3,8 @@ VM_ROOT = ../../../..
 
 USER_OBJ = $(OBJ)/main$(OBJ_SUFF) \
 	$(OBJ)/interpreter_code_impl$(OBJ_SUFF) \
-	$(OBJ)/CodeBuilderVisitor$(OBJ_SUFF)
+	$(OBJ)/CodeBuilderVisitor$(OBJ_SUFF) \
+	$(OBJ)/type_inference_visitor$(OBJ_SUFF)
 
 include $(VM_ROOT)/common.mk
 
