--- a/students/2012/bashorov/bytecode/Makefile
+++ b/students/2012/bashorov/bytecode/Makefile
@@ -4,6 +4,7 @@ VM_ROOT = ../../../..
 USER_OBJ = \
 	$(OBJ)/main$(OBJ_SUFF) \
 	$(OBJ)/BytecodeTranslatorImpl$(OBJ_SUFF) \
+	$(OBJ)/Runner$(OBJ_SUFF) \
 	$(OBJ)/CodeImpl$(OBJ_SUFF) \
 	$(OBJ)/Ast2BytecodeVisitor$(OBJ_SUFF)
 
@@ -11,11 +12,11 @@ NO_JIT = 1
 
 include $(VM_ROOT)/common.mk
 
-TRANSLATOR = $(BIN)/translator
+INTERPRETER = $(BIN)/interpreter
 
-all: $(TRANSLATOR) 
-	# ./test.sh "$(TRANSLATOR)" ./tests/ ./tests/ coloroff showall
-	./test.sh "$(TRANSLATOR)" ./tests/ ./tests/ interpreter coloroff showall
+all: $(INTERPRETER) 
+	./test.sh "$(INTERPRETER) -d" ./tests/ ./tests/ bytecode coloroff showall
+	./test.sh "$(INTERPRETER)" ./tests/ ./tests/ interpreter coloroff showall
 
-$(TRANSLATOR): $(OUT) $(MATHVM_OBJ) $(USER_OBJ)
+$(INTERPRETER): $(OUT) $(MATHVM_OBJ) $(USER_OBJ)
 	$(CXX) -o $@ $(MATHVM_OBJ) $(USER_OBJ) $(LIBS)
