--- a/students/2012/lazarev/Bytecode/Makefile
+++ b/students/2012/lazarev/Bytecode/Makefile
@@ -3,18 +3,26 @@ VM_ROOT = ../../../..
 
 USER_OBJ = \
    $(OBJ)/main$(OBJ_SUFF) \
-   $(OBJ)/astPrinter$(OBJ_SUFF)
+   $(OBJ)/BytecodeGenerationVisitor$(OBJ_SUFF) \
+   $(OBJ)/InterpreterCodeImpl$(OBJ_SUFF) \
+   $(OBJ)/BytecodeTranslatorImpl$(OBJ_SUFF) \
 
 include $(VM_ROOT)/common.mk
-CFLAGS += -m64
+CFLAGS += -march=native
 
-AST_PRINTER = $(BIN)/ast_printer
+INTERPRETER = $(BIN)/interpreter
 
-all: $(AST_PRINTER)
+all: $(INTERPRETER)
 
-$(AST_PRINTER): $(OUT) $(MATHVM_OBJ) $(USER_OBJ)
+$(INTERPRETER): $(OUT) $(MATHVM_OBJ) $(USER_OBJ)
 	$(CXX) -o $@ $(MATHVM_OBJ) $(USER_OBJ) $(LIBS)
 
-$(OBJ)/%$(OBJ_SUFF): astPrinter.h astPrinter.cpp main.cpp
+$(OBJ)/%$(OBJ_SUFF): \
+	BytecodeGenerationVisitor.h \
+	BytecodeGenerationVisitor.cpp \
+	InterperterCodeImpl.h \
+	InterperterCodeImpl.cpp \
+	BytecodeTranslatorImpl.cpp \
+	main.cpp
 	$(CXX) -c $(DEFS) $(CFLAGS) $(INCLUDE) $(VM_INCLUDE) $< -o $@
 
