interpreter fixes, native calls, jit

--- a/students/2012/krinkin/bytecode/Makefile
+++ b/students/2012/krinkin/bytecode/Makefile
@@ -1,15 +1,16 @@
 ROOT        = .
 VM_ROOT     = ../../../..
+USER_LIBS   = 
 USER_CFLAGS = 
 USER_OBJ    = \
         $(OBJ)/main$(OBJ_SUFF) \
         $(OBJ)/bcinterpreter$(OBJ_SUFF) \
         $(OBJ)/typer$(OBJ_SUFF) \
         $(OBJ)/generator$(OBJ_SUFF) \
-        $(OBJ)/bccode$(OBJ_SUFF)
+        $(OBJ)/bccode$(OBJ_SUFF) \
+        $(OBJ)/bccompiler$(OBJ_SUFF)
 
-# i don't need AsmJit
-NO_JIT      = 1
+WITH_SDL = 1
 
 include $(VM_ROOT)/common.mk
 
@@ -18,4 +19,4 @@ INTERPRETER = $(BIN)/interpreter
 all: $(INTERPRETER)
 
 $(INTERPRETER): $(OUT) $(USER_OBJ) $(MATHVM_OBJ)
-	$(CXX) -o $@ $(MATHVM_OBJ) $(USER_OBJ)
+	$(CXX) -o $@ $(MATHVM_OBJ) $(USER_OBJ) $(LIBS)
