--- a/trunk/students/2012/bashorov/bytecode/Makefile
+++ b/trunk/students/2012/bashorov/bytecode/Makefile
@@ -8,15 +8,17 @@ USER_OBJ = \
 	$(OBJ)/CodeImpl$(OBJ_SUFF) \
 	$(OBJ)/Ast2BytecodeVisitor$(OBJ_SUFF)
 
-NO_JIT = 1
-
 include $(VM_ROOT)/common.mk
 
 INTERPRETER = $(BIN)/interpreter
 
-all: $(INTERPRETER) 
+$(INTERPRETER): $(OUT) $(MATHVM_OBJ) $(USER_OBJ)
+	$(CXX) -o $@ $(MATHVM_OBJ) $(USER_OBJ) $(LIBS)
+
+build_: $(INTERPRETER)
+
+run: build_
 	./test.sh "$(INTERPRETER) -d" ./tests/ ./tests/ bytecode coloroff showall
 	./test.sh "$(INTERPRETER)" ./tests/ ./tests/ interpreter coloroff showall
 
-$(INTERPRETER): $(OUT) $(MATHVM_OBJ) $(USER_OBJ)
-	$(CXX) -o $@ $(MATHVM_OBJ) $(USER_OBJ) $(LIBS)
+all: build_
