--- a/trunk/students/2012/lazarev/Bytecode/Makefile
+++ b/trunk/students/2012/lazarev/Bytecode/Makefile
@@ -8,7 +8,7 @@ USER_OBJ = \
    $(OBJ)/BytecodeTranslatorImpl$(OBJ_SUFF) \
 
 include $(VM_ROOT)/common.mk
-CFLAGS += -march=native
+CFLAGS +=
 
 INTERPRETER = $(BIN)/interpreter
 
