use commot interface

--- a/students/2013/pivovarov/02-translator/Makefile
+++ b/students/2013/pivovarov/02-translator/Makefile
@@ -3,7 +3,8 @@ VM_ROOT = ./../../../..
 
 USER_OBJ = \
 	$(OBJ)/main$(OBJ_SUFF) \
-	$(OBJ)/Translator$(OBJ_SUFF)
+	$(OBJ)/Translator$(OBJ_SUFF) \
+	$(OBJ)/InterpreterCodeImpl$(OBJ_SUFF)
 
 include $(VM_ROOT)/common.mk
 
