--- a/trunk/students/2013/pivovarov/02-translator/Makefile
+++ b/trunk/students/2013/pivovarov/02-translator/Makefile
@@ -4,7 +4,7 @@ VM_ROOT = ./../../../..
 OPT = true
 WITH_SDL = true
 
-USER_LIBS = -lavcall
+# USER_LIBS = -lavcall
 
 USER_OBJ = \
 	$(OBJ)/main$(OBJ_SUFF) \
