--- a/trunk/students/2013/montsev/translator/Makefile
+++ b/trunk/students/2013/montsev/translator/Makefile
@@ -10,7 +10,7 @@ endif
 USER_OBJ = \
    $(JIT_OBJ) \
    $(OBJ)/main$(OBJ_SUFF) \
-   $(OBJ)/translator$(OBJ_SUFF)
+   $(OBJ)/Translator$(OBJ_SUFF)
 
 include $(VM_ROOT)/common.mk
 
@@ -18,7 +18,16 @@ MATHVM = $(BIN)/mvm
 
 CXX = g++
 
+.PHONY: all
 all: $(MATHVM)
+
+.PHONY: rebuild
+rebuild: 
+	make clean && make
+
+.PHONY: test
+test: 
+	make && ./run.py
 
 $(MATHVM): $(OUT) $(MATHVM_OBJ) $(USER_OBJ)
 	$(CXX) -o $@ $(MATHVM_OBJ) $(USER_OBJ) $(LIBS)
