--- a/trunk/students/2013/savenko/02_translator/Makefile
+++ b/trunk/students/2013/savenko/02_translator/Makefile
@@ -2,7 +2,9 @@ ROOT = .
 VM_ROOT = ../../../..
 
 USER_OBJ = \
-    $(OBJ)/main$(OBJ_SUFF)
+    $(OBJ)/main$(OBJ_SUFF)\
+    $(OBJ)/InterpreterCodeImpl$(OBJ_SUFF)\
+    $(OBJ)/BytecodeTranslator$(OBJ_SUFF)
 
 include $(VM_ROOT)/common.mk
 
