--- a/trunk/students/2013/kononenko/02_translator/02_translator.vcxproj.filters
+++ b/trunk/students/2013/kononenko/02_translator/02_translator.vcxproj.filters
@@ -46,7 +46,7 @@
     <ClCompile Include="code_impl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="interpreter.cpp">
+    <ClCompile Include="interpreter_impl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
