--- a/students/2013/kononenko/02_translator/02_translator.vcxproj
+++ b/students/2013/kononenko/02_translator/02_translator.vcxproj
@@ -84,7 +84,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="code_impl.cpp" />
-    <ClCompile Include="interpreter.cpp" />
+    <ClCompile Include="interpreter_impl.cpp" />
     <ClCompile Include="main.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
