--- a/trunk/students/2013/palchikov/03-interpreter/Makefile
+++ b/trunk/students/2013/palchikov/03-interpreter/Makefile
@@ -11,7 +11,7 @@ USER_OBJ = \
    $(JIT_OBJ) \
    $(OBJ)/main$(OBJ_SUFF) \
    $(OBJ)/BcTranslator$(OBJ_SUFF) \
-   $(OBJ)/InterpreterCodeImpl$(OBJ_SUFF)
+   $(OBJ)/CodeImpl$(OBJ_SUFF)
 
 include $(VM_ROOT)/common.mk
 
