add interpreter implementation stub; fix translator status report

--- a/students/2013/savenko/02_translator/Makefile
+++ b/students/2013/savenko/02_translator/Makefile
@@ -3,6 +3,7 @@ VM_ROOT = ../../../..
 
 USER_OBJ = \
     $(OBJ)/main$(OBJ_SUFF)\
+    $(OBJ)/InterpreterCodeImpl$(OBJ_SUFF)\
     $(OBJ)/BytecodeTranslator$(OBJ_SUFF)
 
 # uncomment to enable debug logging 
