--- a/students/2013/kononenko/02_translator/02_translator.vcxproj.filters
+++ b/students/2013/kononenko/02_translator/02_translator.vcxproj.filters
@@ -23,13 +23,13 @@
     <ClInclude Include="interpreted.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="interpreter.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="defs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="function.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="interpreter_impl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
