--- a/trunk/students/2013/jirkov/vm/Makefile
+++ b/trunk/students/2013/jirkov/vm/Makefile
@@ -21,6 +21,7 @@ USER_OBJ = \
 	$(OBJ)/diagnostics$(OBJ_SUFF) \
 	$(OBJ)/Annotation$(OBJ_SUFF) \
 	$(OBJ)/TypeInferrer$(OBJ_SUFF) \
+	$(OBJ)/StackSizeInferrer$(OBJ_SUFF) \
 	$(OBJ)/hashtable$(OBJ_SUFF) 
 
 include $(VM_ROOT)/common.mk
