--- a/trunk/students/2014/turaev.t/2/Makefile
+++ b/trunk/students/2014/turaev.t/2/Makefile
@@ -1,5 +1,5 @@
 ROOT   = .
-VM_ROOT = ../../../../
+VM_ROOT = ../../../..
 
 ifneq ($(NO_JIT), 1)
 JIT_OBJ = $(OBJ)/jit$(OBJ_SUFF)
@@ -11,16 +11,19 @@ USER_CFLAGS += -std=c++11 -O3 -Wall -Wno-unused
 
 USER_OBJ = \
    $(JIT_OBJ) \
-   $(OBJ)/main$(OBJ_SUFF) \
-   $(OBJ)/BytecodeTranslator$(OBJ_SUFF) \
    $(OBJ)/BytecodeVisitor$(OBJ_SUFF) \
-   $(OBJ)/Context$(OBJ_SUFF)
+   $(OBJ)/Context$(OBJ_SUFF) \
+   $(OBJ)/SimpleInterpreter$(OBJ_SUFF)
 
 include $(VM_ROOT)/common.mk
 
 MATHVM = $(BIN)/mvm
+TRANSLATOR = $(BIN)/bcp
 
-all: $(MATHVM)
+all: $(MATHVM) $(TRANSLATOR)
 
-$(MATHVM): $(OUT) $(MATHVM_OBJ) $(USER_OBJ)
-	$(CXX) -o $@ $(MATHVM_OBJ) $(USER_OBJ) $(LIBS)
+$(MATHVM): $(OUT) $(MATHVM_OBJ) $(USER_OBJ) $(OBJ)/main_interpreter$(OBJ_SUFF)
+	$(CXX) -o $@ $(OBJ)/main_interpreter$(OBJ_SUFF) $(MATHVM_OBJ) $(USER_OBJ) $(LIBS)
+
+$(TRANSLATOR): $(OUT) $(MATHVM_OBJ) $(USER_OBJ) $(OBJ)/main_translator$(OBJ_SUFF)
+	$(CXX) -o $@ $(OBJ)/main_translator$(OBJ_SUFF) $(MATHVM_OBJ) $(USER_OBJ) $(LIBS)
