+ constants loading + arithmetic ops + bitwise ops + comparisons + printing + conds and jumps

--- a/students/2014/obedin/3/Makefile
+++ b/students/2014/obedin/3/Makefile
@@ -13,7 +13,7 @@ USER_OBJ = \
    $(OBJ)/my_translator$(OBJ_SUFF) \
    $(OBJ)/my_interpreter$(OBJ_SUFF)
 
-USER_CFLAGS = -Wno-unused
+USER_CFLAGS = -Wno-unused -DDUMP_BYTECODE
 
 include $(VM_ROOT)/common.mk
 
@@ -24,7 +24,9 @@ all: $(MATHVM)
 $(MATHVM): $(OUT) $(MATHVM_OBJ) $(USER_OBJ)
 	$(CXX) -o $@ $(MATHVM_OBJ) $(USER_OBJ) $(LIBS)
 
-$(OBJ)/my_translator$(OBJ_SUFF): my_translator.cpp my_translator-helpers.cpp my_translator-visitors.cpp
+$(OBJ)/my_translator$(OBJ_SUFF): my_translator.cpp my_translator-helpers.cpp my_translator-visitors.cpp my_translator.hpp
+
+$(OBJ)/my_interpreter$(OBJ_SUFF): my_interpreter.cpp my_interpreter.hpp
 
 SCRIPT=
 
