+ calling and returning from functions (not native) = fixed typo

--- a/students/2014/obedin/3/Makefile
+++ b/students/2014/obedin/3/Makefile
@@ -31,4 +31,4 @@ $(OBJ)/my_interpreter$(OBJ_SUFF): my_interpreter.cpp my_interpreter.hpp
 SCRIPT=
 
 run:
-	$(BIN)/mvm $(SCRIPT)
+	time $(BIN)/mvm $(SCRIPT)
