--- a/trunk/students/2014/turaev.t/2/Makefile
+++ b/trunk/students/2014/turaev.t/2/Makefile
@@ -1,21 +1,15 @@
 ROOT   = .
 VM_ROOT = ../../../..
 
-ifneq ($(NO_JIT), 1)
-JIT_OBJ = $(OBJ)/jit$(OBJ_SUFF)
-else
-JIT_OBJ =
-endif
+include $(VM_ROOT)/common.mk
 
-USER_CFLAGS += -std=c++11 -O3 -Wall -Wno-unused
+USER_CFLAGS += -std=c++11 -Wall -Wno-unused -g0 -Ofast
 
 USER_OBJ = \
    $(JIT_OBJ) \
    $(OBJ)/BytecodeVisitor$(OBJ_SUFF) \
    $(OBJ)/Context$(OBJ_SUFF) \
    $(OBJ)/SimpleInterpreter$(OBJ_SUFF)
-
-include $(VM_ROOT)/common.mk
 
 MATHVM = $(BIN)/mvm
 TRANSLATOR = $(BIN)/bcp
