--- a/trunk/students/2014/habibulin/1/Makefile
+++ b/trunk/students/2014/habibulin/1/Makefile
@@ -10,13 +10,18 @@ endif
 USER_OBJ = \
    $(JIT_OBJ) \
    $(OBJ)/main$(OBJ_SUFF) \
-   $(OBJ)/ast_printer$(OBJ_SUFF)
+   $(OBJ)/my_translator$(OBJ_SUFF) \
+   $(OBJ)/bytecode_translator$(OBJ_SUFF) \
+   $(OBJ)/bytecode_generator$(OBJ_SUFF) \
+   $(OBJ)/my_utils$(OBJ_SUFF)
 
 include $(VM_ROOT)/common.mk
 
 MATHVM = $(BIN)/mvm
 
 all: $(MATHVM)
+
+USER_CFLAGS = -Wno-unused -Wno-c++0x-compat -std=c++11
 
 $(MATHVM): $(OUT) $(MATHVM_OBJ) $(USER_OBJ)
 	$(CXX) -o $@ $(MATHVM_OBJ) $(USER_OBJ) $(LIBS)
