--- a/students/2014/bugaev/2/Makefile
+++ b/students/2014/bugaev/2/Makefile
@@ -10,7 +10,8 @@ endif
 USER_OBJ = \
    $(JIT_OBJ) \
    $(OBJ)/main$(OBJ_SUFF) \
-   $(OBJ)/bytecode_translator$(OBJ_SUFF)
+   $(OBJ)/bytecode_translator$(OBJ_SUFF) \
+   $(OBJ)/bytecode_generator$(OBJ_SUFF)
 
 include $(VM_ROOT)/common.mk
 
