bug fix, but who cares

--- a/students/2014/ordijan/2/Makefile
+++ b/students/2014/ordijan/2/Makefile
@@ -1,7 +1,7 @@
 ROOT   = .
 VM_ROOT = ../../../..
 OPT = true
-#WITH_SDL = true
+WITH_SDL = true
 
 ifneq ($(NO_JIT), 1)
 JIT_OBJ = $(OBJ)/jit$(OBJ_SUFF)
