Crazy midnight commit

--- a/students/2016/baidin/Makefile
+++ b/students/2016/baidin/Makefile
@@ -2,7 +2,7 @@ ROOT   = .
 VM_ROOT = ../../..
 TEST_ROOT = $(VM_ROOT)/tests
 
-USER_CFLAGS = -std=c++11
+USER_CFLAGS = -std=c++11 -g
 
 ifneq ($(NO_JIT), 1)
 JIT_OBJ = $(OBJ)/jit$(OBJ_SUFF)
@@ -12,7 +12,9 @@ endif
 
 USER_OBJ = \
    $(JIT_OBJ) \
-   $(OBJ)/main$(OBJ_SUFF)
+   $(OBJ)/main$(OBJ_SUFF) \
+   $(OBJ)/BytecodeTranslator$(OBJ_SUFF) \
+   $(OBJ)/BytecodeInterpreter$(OBJ_SUFF)
 
 include $(VM_ROOT)/common.mk
 
