Fix pp; Add translator

--- a/students/2016/gorbunov/Makefile
+++ b/students/2016/gorbunov/Makefile
@@ -14,7 +14,10 @@ USER_OBJ = \
    $(JIT_OBJ) \
    $(OBJ)/main$(OBJ_SUFF) \
    $(OBJ)/translator_impl$(OBJ_SUFF) \
-   $(OBJ)/pretty_print$(OBJ_SUFF)
+   $(OBJ)/pretty_print$(OBJ_SUFF) \
+   $(OBJ)/translator_context$(OBJ_SUFF) \
+   $(OBJ)/translate_to_bytecode$(OBJ_SUFF) \
+   $(OBJ)/interpreter_code_impl$(OBJ_SUFF)
 
 include $(VM_ROOT)/common.mk
 
