upgrade interpreter to [ML2.61]

--- a/students/2016/stepanov/2/Makefile
+++ b/students/2016/stepanov/2/Makefile
@@ -20,6 +20,7 @@ USER_OBJ = \
    $(OBJ)/EmptyInterpreter$(OBJ_SUFF)  \
    $(OBJ)/main$(OBJ_SUFF) \
    $(OBJ)/translator$(OBJ_SUFF) \
+   $(OBJ)/RFUtils$(OBJ_SUFF)  \
    $(OBJ)/translator_create$(OBJ_SUFF)
 
 
