Support closure for functions

--- a/students/2016/bibaev/translator/Makefile
+++ b/students/2016/bibaev/translator/Makefile
@@ -27,4 +27,4 @@ MATHVM = $(BIN)/mvm
 all: $(MATHVM)
 
 $(MATHVM): $(OUT) $(USER_OBJ) $(MATHVM_OBJ)
-	$(CXX) -o $@ $(USER_OBJ) $(MATHVM_OBJ) $(LIBS)
+	$(CXX) $(USER_CFLAGS) -o $@ $(USER_OBJ) $(MATHVM_OBJ) $(LIBS)
