interpreter: Add closures
Signed-off-by: Pavel Begunkov <asml.silence@gmail.com>

--- a/students/2017/begunkov/Makefile
+++ b/students/2017/begunkov/Makefile
@@ -2,8 +2,8 @@ ROOT   = .
 VM_ROOT = ../../..
 
 #OPT = 0
-NO_JIT = 1
-#WITH_SDL = 0
+NO_JIT = 0
+WITH_SDL = 1
 
 USER_CFLAGS = -std=c++11 -Wno-unused-function -Wno-error=switch -Wno-switch -ldl
 
